--- a/index.html
+++ b/index.html
@@ -577,12 +577,12 @@
 	<script>
 // Add your Firebase config here
 const firebaseConfig = {
-  apiKey: "YOUR_API_KEY",
-  authDomain: "YOUR_PROJECT.firebaseapp.com",
-  projectId: "YOUR_PROJECT_ID",
-  storageBucket: "YOUR_BUCKET.appspot.com",
-  messagingSenderId: "YOUR_SENDER_ID",
-  appId: "YOUR_APP_ID"
+  apiKey: "AIzaSyCpsZJCDfv14Fa1-zpfrL2BJnMX5chOA1Q",
+  authDomain: "schedule-b4fb6.firebaseapp.com",
+  projectId: "schedule-b4fb6",
+  storageBucket: "schedule-b4fb6.appspot.com",
+  messagingSenderId: "837575213136",
+  appId: "1:837575213136:web:dd65b524083113822a1155"
 };
 
 // Initialize Firebase
