--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
     <script>
         // JSONBin.io configuration
-        const BIN_ID = '68110a068a456b79669407d7';
+        const BIN_ID = 'https://api.jsonbin.io/v3/b/68110a068a456b79669407d7';
         const API_KEY = '$2a$10$XTC0FzUB4ck8X/8rxxiM3uTEclRXWMBKhkSdtEeP30B6sPmnAKGHC';
 
         // Application data
