--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     <script>
         // JSONBin.io Configuration
         const BIN_ID = '68110a068a456b79669407d7'; // Replace with your bin ID
-        const API_KEY = '$2a$10$XTC0FzUB4ck8X/8rxxiM3uTEclRXWMBKhkSdtEeP30B6sPmnAKGHC'; // Replace with your API key
+        const API_KEY = '$2a$10$f3q74/wLdu/PTRyyIK/qD.KzH0nNADmxyQdokYkkfdpy7bWaJijFO'; // Replace with your API key
 
         // Team Configuration
         const TEAMS = [
