--- a/index.html
+++ b/index.html
@@ -196,12 +196,32 @@
 
         // Team Configuration
         const TEAMS = [
-            { id: 1, name: "Web Platform", lead: "Emma Wilson", leadId: 101 },
-            { id: 2, name: "Mobile Team", lead: "Michael Chen", leadId: 102 },
-            { id: 3, name: "QA Engineers", lead: "Sophia Rodriguez", leadId: 103 },
-            { id: 4, name: "DevOps", lead: "James Thompson", leadId: 104 },
-            { id: 5, name: "UI/UX Design", lead: "Olivia Davis", leadId: 105 },
-            { id: 6, name: "Data Science", lead: "Liam Johnson", leadId: 106 }
+            { id: 1, name: "DBA", lead: "Emma Wilson", leadId: 101 },
+            { id: 2, name: "DevSecOps", lead: "Michael Chen", leadId: 102 },
+            { id: 3, name: "Infra-Engineering", lead: "Sophia Rodriguez", leadId: 103 },
+            { id: 4, name: "Team 6 - Quattro Coders", lead: "James Thompson", leadId: 104 },
+            { id: 5, name: "Team 7 - Trailblazers", lead: "Olivia Davis", leadId: 105 },
+            { id: 6, name: "Team 8 - Code Busters", lead: "Liam Johnson", leadId: 106 }
+            { id: 7, name: "Team 9 - Nexus", lead: "Emma Wilson", leadId: 101 },
+            { id: 8, name: "Team 10 - Octopus", lead: "Michael Chen", leadId: 102 },
+            { id: 9, name: "Team 11 - CWS Squad", lead: "Sophia Rodriguez", leadId: 103 },
+            { id: 10, name: "Team 12 - Tech Titans", lead: "James Thompson", leadId: 104 },
+            { id: 11, name: "Team 14 - TMNT", lead: "Olivia Davis", leadId: 105 },
+            { id: 12, name: "Team 16 - A Plus", lead: "Liam Johnson", leadId: 106 }
+            { id: 13, name: "Team 21 - AI Team", lead: "Emma Wilson", leadId: 101 },
+            { id: 14, name: "Team 22 - 22 Degress United", lead: "Michael Chen", leadId: 102 },
+            { id: 15, name: "Team 23 - Data Avengers", lead: "Sophia Rodriguez", leadId: 103 },
+            { id: 16, name: "Team 24 - Raptors", lead: "James Thompson", leadId: 104 },
+            { id: 17, name: "Team 25 - Divergent", lead: "Olivia Davis", leadId: 105 },
+            { id: 18, name: "Team 26 - Orchestr8", lead: "Liam Johnson", leadId: 106 }
+            { id: 11, name: "Team 27", lead: "Olivia Davis", leadId: 105 },
+            { id: 12, name: "Team 28 - Vanguard", lead: "Liam Johnson", leadId: 106 }
+            { id: 13, name: "Team 34 - Regulatory Content", lead: "Emma Wilson", leadId: 101 },
+            { id: 14, name: "Team QFDS", lead: "Michael Chen", leadId: 102 },
+            { id: 15, name: "Team Y", lead: "Sophia Rodriguez", leadId: 103 },
+            { id: 16, name: "New Exchange Team", lead: "James Thompson", leadId: 104 },
+            { id: 17, name: "Team 25 - Divergent", lead: "Olivia Davis", leadId: 105 },
+            { id: 18, name: "New Insight Team", lead: "Liam Johnson", leadId: 106 }
         ];
 
         const DAYS_TO_SHOW = 14;
