--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 <body>
     <div class="header">
         <h1>Live Team Scheduler</h1>
-        <p>Real-time Scheduling with JSONBin.io</p>
+        <p>Real-time Scheduling</p>
     </div>
 
     <div class="selection-panels">
