--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         ];
 
         const DAYS_TO_SHOW = 14;
-        const TIME_SLOTS = ['09:00', '10:00', '11:00', '12:00', '13:00', '14:00', '15:00', '16:00'];
+        const TIME_SLOTS = ['09:00', '09:30', '10:00', '10:30', '11:00', '11:30', '12:00', '13:00', '14:00', '15:00', '16:00'];
         
         // Memory-only selections
         let selectedTeams = [];
