--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 <body>
     <div class="header">
         <h1>Live Team Scheduler</h1>
-        <p>Real-time Scheduling</p>
+        <p>Real-time Scheduling(Time Zone in EST)</p>
     </div>
 
     <div class="selection-panels">
@@ -215,7 +215,7 @@
             <div id="teamSelector"></div>
         </div>
         <div class="selection-panel">
-            <h3>Team Leads</h3>
+            <h3>Project Leads</h3>
             <div id="leadSelector"></div>
         </div>
     </div>
@@ -283,24 +283,24 @@
 
         // Teams and leads configuration
         const TEAMS = [
-            { id: 1, name: "DBA", lead: "Micah Tison", leadId: 101 },
-            { id: 2, name: "DevSecOps", lead: "Luca Mohammadi", leadId: 102 },
-            { id: 3, name: "Infra-Engineering", lead: "Volker Loch", leadId: 103 },
-            { id: 4, name: "Team 6 - Quattro Coders", lead: "Andrey Martinkov", leadId: 104 },
-            { id: 5, name: "Team 7 - Trailblazers", lead: "Frank Schroeder", leadId: 105 },
-            { id: 6, name: "Team 8 - Code Busters", lead: "Eric Ensminger", leadId: 106 },
-            { id: 7, name: "Team 9 - Nexus", lead: "Crystal Farnam", leadId: 107 },
-            { id: 8, name: "Team 10 - Octopus", lead: "Hunter Sisser", leadId: 108 },
-            { id: 9, name: "Team 11 - CWS Squad", lead: "Dylan Fulmer", leadId: 109 },
-            { id: 10, name: "Team 12 - Tech Titans", lead: "Ron Babington", leadId: 110 },
-            { id: 11, name: "Team 14 - TMNT", lead: "Jacki Burns", leadId: 111 },
-            { id: 12, name: "Team 16 - A Plus", lead: "Lily Hogan", leadId: 112 },
-            { id: 13, name: "Team 21 - AI Team", lead: "Gusty Brinley", leadId: 113 },
-            { id: 14, name: "Team 22 - 22 Degrees United", lead: "Karina Romero", leadId: 114 },
-            { id: 15, name: "Team 23 - Data Avengers", lead: "Irene Griffin", leadId: 115 },
-            { id: 16, name: "Team 24 - Raptors", lead: "Jeanne De Beer", leadId: 116 },
-            { id: 17, name: "Team 25 - Divergent", lead: "Ulrike Weissbach", leadId: 117 },
-            { id: 18, name: "Team 26 - Orchestr8", lead: "Melissa Labanc", leadId: 118 },
+            { id: 1, name: "DBA", lead: "Lead 1", leadId: 101 },
+            { id: 2, name: "DevSecOps", lead: "Lead 2", leadId: 102 },
+            { id: 3, name: "Infra-Engineering", lead: "Lead 3", leadId: 103 },
+            { id: 4, name: "Team 6 - Quattro Coders", lead: "Lead 4", leadId: 104 },
+            { id: 5, name: "Team 7 - Trailblazers", lead: "Lead 5", leadId: 105 },
+            { id: 6, name: "Team 8 - Code Busters", lead: "Lead 6", leadId: 106 },
+            { id: 7, name: "Team 9 - Nexus", lead: "Lead 7", leadId: 107 },
+            { id: 8, name: "Team 10 - Octopus", lead: "Lead 8", leadId: 108 },
+            { id: 9, name: "Team 11 - CWS Squad", lead: "Lead 9", leadId: 109 },
+            { id: 10, name: "Team 12 - Tech Titans", lead: "Lead 10", leadId: 110 },
+            { id: 11, name: "Team 14 - TMNT", lead: "Lead 11", leadId: 111 },
+            { id: 12, name: "Team 16 - A Plus", lead: "Lead 12", leadId: 112 },
+            { id: 13, name: "Team 21 - AI Team", lead: "Lead 13", leadId: 113 },
+            { id: 14, name: "Team 22 - 22 Degrees United", lead: "Lead 14", leadId: 114 },
+            { id: 15, name: "Team 23 - Data Avengers", lead: "Lead 15", leadId: 115 },
+            { id: 16, name: "Team 24 - Raptors", lead: "Lead 16", leadId: 116 },
+            { id: 17, name: "Team 25 - Divergent", lead: "Lead 17", leadId: 117 },
+            { id: 18, name: "Team 26 - Orchestr8", lead: "Lead 18", leadId: 118 },
             { id: 19, name: "Team 27", lead: "", leadId: null },
             { id: 20, name: "Team 28 - Vanguard", lead: "", leadId: null },
             { id: 21, name: "Team 34 - Regulatory Content", lead: "", leadId: null },
@@ -317,7 +317,7 @@
 
         // Calendar configuration
         const MAX_WORKING_DAYS = 10;
-        const TIME_SLOTS = ['12:30', '13:00', '13:30', '14:00', '14:30', '15:00', '15:30', '16:00', '16:30', '17:00', '17:30', '18:00', '18:30', '19:00', '19:30', '20:00', '20:30', '21:00', '21:30', '22:00', '22:30', '23:00', '23:30', '00:00', '00:30', '01:00', '01:30', '02:00', '02:30', '03:00', '03:30', '04:00', '04:30', '05:00', '05:30', '06:00', '06:30', '07:00', '07:30', '08:00', '08:30', '09:00', '09:30', '10:00', '10:30', '11:00', '11:30', '12:00'];
+        const TIME_SLOTS = ['14:30', '15:00', '15:30', '16:00', '16:30', '17:00', '17:30', '18:00', '18:30', '19:00', '19:30', '20:00', '20:30', '21:00', '21:30', '22:00', '22:30', '23:00', '23:30', '00:00', '00:30', '01:00', '01:30', '02:00', '02:30', '03:00', '03:30', '04:00', '04:30', '05:00', '05:30', '06:00', '06:30', '07:00', '07:30', '08:00', '08:30', '09:00', '09:30', '10:00', '10:30', '11:00', '11:30', '12:00'];
         const START_DATE = new Date(2025, 4, 12);
 
         // State management
