--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
     <div class="header">
         <h1>Live Team Scheduler</h1>
         <p>Real-time Scheduling(Time Zone in EST)</p>
+		
     </div>
 
     <div class="selection-panels">
@@ -216,6 +217,7 @@
         </div>
         <div class="selection-panel">
             <h3>Project Leads</h3>
+			<a href="https://3eco.atlassian.net/wiki/spaces/3EIT/pages/1427275972/Project+Lead+Mapping">Project Lead Mapping Sheet</a>
             <div id="leadSelector"></div>
         </div>
     </div>
