--- a/index.html
+++ b/index.html
@@ -295,24 +295,24 @@
 
         // Teams and leads configuration
         const TEAMS = [
-            { id: 1, name: "DBA", lead: "Micah Tison", leadId: 101 },
-            { id: 2, name: "DevSecOps", lead: "Luca Mohammadi", leadId: 102 },
-            { id: 3, name: "Infra-Engineering", lead: "Volker Loch", leadId: 103 },
-            { id: 4, name: "Team 6 - Quattro Coders", lead: "Andrey Martinkov", leadId: 104 },
-            { id: 5, name: "Team 7 - Trailblazers", lead: "Frank Schroeder", leadId: 105 },
-            { id: 6, name: "Team 8 - Code Busters", lead: "Eric Ensminger", leadId: 106 },
-            { id: 7, name: "Team 9 - Nexus", lead: "Crystal Farnam", leadId: 107 },
-            { id: 8, name: "Team 10 - Octopus", lead: "Hunter Sisser", leadId: 108 },
-            { id: 9, name: "Team 11 - CWS Squad", lead: "Dylan Fulmer", leadId: 109 },
-            { id: 10, name: "Team 12 - Tech Titans", lead: "Ron Babington", leadId: 110 },
-            { id: 11, name: "Team 14 - TMNT", lead: "Jacki Burns", leadId: 111 },
-            { id: 12, name: "Team 16 - A Plus", lead: "Lily Hogan", leadId: 112 },
-            { id: 13, name: "Team 21 - AI Team", lead: "Gusty Brinley", leadId: 113 },
-            { id: 14, name: "Team 22 - 22 Degrees United", lead: "Karina Romero", leadId: 114 },
-            { id: 15, name: "Team 23 - Data Avengers", lead: "Irene Griffin", leadId: 115 },
-            { id: 16, name: "Team 24 - Raptors", lead: "Jeanne De Beer", leadId: 116 },
-            { id: 17, name: "Team 25 - Divergent", lead: "Ulrike Weissbach", leadId: 117 },
-            { id: 18, name: "Team 26 - Orchestr8", lead: "Melissa Labanc", leadId: 118 },
+            { id: 1, name: "DBA", lead: "Lead 1", leadId: 101 },
+            { id: 2, name: "DevSecOps", lead: "Lead 2", leadId: 102 },
+            { id: 3, name: "Infra-Engineering", lead: "Lead 3", leadId: 103 },
+            { id: 4, name: "Team 6 - Quattro Coders", lead: "Lead 4", leadId: 104 },
+            { id: 5, name: "Team 7 - Trailblazers", lead: "Lead 5", leadId: 105 },
+            { id: 6, name: "Team 8 - Code Busters", lead: "Lead 6", leadId: 106 },
+            { id: 7, name: "Team 9 - Nexus", lead: "Lead 7", leadId: 107 },
+            { id: 8, name: "Team 10 - Octopus", lead: "Lead 8", leadId: 108 },
+            { id: 9, name: "Team 11 - CWS Squad", lead: "Lead 9", leadId: 109 },
+            { id: 10, name: "Team 12 - Tech Titans", lead: "Lead 10", leadId: 110 },
+            { id: 11, name: "Team 14 - TMNT", lead: "Lead 11", leadId: 111 },
+            { id: 12, name: "Team 16 - A Plus", lead: "Lead 12", leadId: 112 },
+            { id: 13, name: "Team 21 - AI Team", lead: "Lead 13", leadId: 113 },
+            { id: 14, name: "Team 22 - 22 Degrees United", lead: "Lead 14", leadId: 114 },
+            { id: 15, name: "Team 23 - Data Avengers", lead: "Lead 15", leadId: 115 },
+            { id: 16, name: "Team 24 - Raptors", lead: "Lead 16", leadId: 116 },
+            { id: 17, name: "Team 25 - Divergent", lead: "Lead 17", leadId: 117 },
+            { id: 18, name: "Team 26 - Orchestr8", lead: "Lead 18", leadId: 118 },
             { id: 19, name: "Team 27", lead: "", leadId: null },
             { id: 20, name: "Team 28 - Vanguard", lead: "", leadId: null },
             { id: 21, name: "Team 34 - Regulatory Content", lead: "", leadId: null },
