--- a/index.html
+++ b/index.html
@@ -227,7 +227,8 @@
             <div id="teamSelector"></div>
         </div>
         <div class="selection-panel">
-            <h3>Team Leads</h3>
+            <h3>Project Leads</h3>
+			<a href="https://3eco.atlassian.net/wiki/spaces/3EIT/pages/1427275972/Project+Lead+Mapping">Project Lead Mapping Sheet</a>
             <div id="leadSelector"></div>
         </div>
     </div>
