--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Team Scheduler(Time Zone is EST)</title>
+    <title>Live Team Scheduler</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -218,7 +218,7 @@
 <body>
     <div class="header">
         <h1>Live Team Scheduler</h1>
-        <p>Real-time Scheduling</p>
+        <p>Real-time Scheduling(Time Zone is EST)</p>
     </div>
 
     <div class="selection-panels">
