--- a/index.html
+++ b/index.html
@@ -411,7 +411,8 @@
             { id: 22, name: "Team QFDS", lead: "", leadId: null },
             { id: 23, name: "Team Y", lead: "", leadId: null },
             { id: 24, name: "New Exchange Team", lead: "", leadId: null },
-            { id: 25, name: "New Insight Team", lead: "", leadId: null }
+            { id: 25, name: "New Insight Team", lead: "", leadId: null },
+            { id: 26, name: "Team 1 - Turbo Time", lead: "", leadId: null}
         ];
 
         const LEADS = TEAMS.filter(team => team.lead && team.leadId).map(team => ({
