--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             { id: 9, name: "Team 11 - CWS Squad", lead: "Dylan Fulmer", leadId: 109 },
             { id: 10, name: "Team 12 - Tech Titans", lead: "Ron Babington", leadId: 110 },
             { id: 11, name: "Team 14 - TMNT", lead: "Jacki Burns", leadId: 111 },
-            { id: 12, name: "Team 16 - A Plus", lead: "Lily Hogan", leadId: 112 },
+            { id: 12, name: "Team 16 - A Plus Insight", lead: "Lily Hogan", leadId: 112 },
             { id: 13, name: "Team 21 - AI Team", lead: "Gusty Brinley", leadId: 113 },
             { id: 14, name: "Team 22 - 22 Degrees United", lead: "Karina Romero", leadId: 114 },
             { id: 15, name: "Team 23 - Data Avengers", lead: "Irene Griffin", leadId: 115 },
@@ -219,8 +219,8 @@
             { id: 21, name: "Team 34 - Regulatory Content" },
             { id: 22, name: "Team QFDS" },
             { id: 23, name: "Team Y" },
-            { id: 24, name: "New Exchange Team" },
-            { id: 25, name: "New Insight Team" },
+            { id: 24, name: "Exchange 5" },
+            { id: 25, name: "Exchange 4" },
             { id: 26, name: "Team 1 - Turbo Time"}
         ];
 
