--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
             { id: 9, name: "Team 11 - CWS Squad", lead: "Lead 9", leadId: 109 },
             { id: 10, name: "Team 12 - Tech Titans", lead: "Lead 10", leadId: 110 },
             { id: 11, name: "Team 14 - TMNT", lead: "Lead 11", leadId: 111 },
-            { id: 12, name: "Team 16 - A Plus", lead: "Lead 12", leadId: 112 },
+            { id: 12, name: "Team 16 - A Plus(Insight)", lead: "Lead 12", leadId: 112 },
             { id: 13, name: "Team 21 - AI Team", lead: "Lead 13", leadId: 113 },
             { id: 14, name: "Team 22 - 22 Degrees United", lead: "Lead 14", leadId: 114 },
             { id: 15, name: "Team 23 - Data Avengers", lead: "Lead 15", leadId: 115 },
@@ -410,8 +410,8 @@
             { id: 21, name: "Team 34 - Regulatory Content", lead: "", leadId: null },
             { id: 22, name: "Team QFDS", lead: "", leadId: null },
             { id: 23, name: "Team Y", lead: "", leadId: null },
-            { id: 24, name: "New Exchange Team", lead: "", leadId: null },
-            { id: 25, name: "New Insight Team", lead: "", leadId: null },
+            { id: 24, name: "Exchange 5", lead: "", leadId: null },
+            { id: 25, name: "Exchange 6", lead: "", leadId: null },
             { id: 26, name: "Team 1 - Turbo Time", lead: "", leadId: null}
         ];
 
